# ifBO

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  benchmarks.md  core_requirements.txt  download.py  extra_requirements.txt  install.sh  justfile  nvidia_requirements.txt  plot.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yaml  python-package.yml
examples/: Getting started with ifBO.ipynb
ifbo/: __init__.py  bar_distribution.py  decoders.py  download.py  encoders.py  initializers.py  layer.py  model.py  positional_encodings.py  surrogate.py  train.py  transformer.py  utils.py
ifbo/priors/: __init__.py  ftpfn_prior.py  output_sorted.npy  prior.py  prior_bag.py  utils.py
src/PFNs4HPO/: .gitignore  README.md  main.py  setup.py
src/PFNs4HPO/pfns4hpo/: __init__.py  bar_distribution.py  evaluate.py  model.py  train.py  utils.py
src/PFNs4HPO/pfns4hpo/priors/: __init__.py  dyhpo_prior.py  freeze_thaw.py  gak_prior.py  hebo_snoek.py  hpo.py  hpo_lc_pfn_bnn.py  hpo_lc_pfn_bnn2.py  hpo_lc_pfn_bnn3.py  hpo_lc_pfn_bnn3c.py  hpo_lc_pfn_bnn4.py  hpo_lc_pfn_bnn4b.py  hpo_lc_pfn_bnn52_broken.py  hpo_lc_pfn_bnn52_pow4.py  hpo_lc_pfn_bnn5_broken.py  hpo_lc_pfn_bnn5_broken_bbo10d.py  hpo_lc_pfn_bnn5_broken_bbo1d.py  hpo_lc_pfn_bnn5_broken_no_hps.py  hpo_lc_pfn_bnn5_comb.py  hpo_lc_pfn_bnn5_exp4.py  hpo_lc_pfn_bnn5_pow4.py  hpo_lc_pfn_bnn5a.py  hpo_lc_pfn_bnn5b.py  hpo_lc_pfn_bnn5c.py  hpo_lc_pfn_bopfn_broken.py  hpo_lc_pfn_bopfn_broken_ablation.py  hpo_lc_pfn_bopfn_broken_laplace.py  hpo_lc_pfn_bopfn_broken_no_hps.py  hpo_lc_pfn_bopfn_broken_query.py  hpo_lc_pfn_bopfn_broken_query2.py  hpo_lc_pfn_bopfn_broken_query3.py  hpo_lc_pfn_bopfn_broken_ymax1.py  hpo_lc_pfn_bopfn_comb.py  hpo_lc_pfn_bopfn_pow4.py  lcgp.py  lcnet.py  lcnet_hebo.py  multicurves_with_configurations.py  multicurves_with_configurations_swapped.py  utils.py
src/mf-prior-bench/: setup.py
src/mf-prior-bench/src/mfpbench/: __init__.py  __main__.py  benchmark.py  config.py  correlations.py  get.py  metric.py  priors.py  result.py  resultframe.py  setup_benchmark.py  stats.py  tabular.py  util.py
src/mf-prior-bench/src/mfpbench/jahs/: __init__.py  benchmark.py
src/mf-prior-bench/src/mfpbench/lcbench_tabular/: __init__.py  benchmark.py
src/mf-prior-bench/src/mfpbench/nb201_tabular/: benchmark.py  try_parse_nb201.py
src/mf-prior-bench/src/mfpbench/pd1/: __init__.py  benchmark.py
src/mf-prior-bench/src/mfpbench/pd1_tabular/: __init__.py  benchmark.py
src/mf-prior-bench/src/mfpbench/synthetic/: __init__.py
src/mf-prior-bench/src/mfpbench/taskset_tabular/: __init__.py  benchmark.py
src/mf-prior-bench/src/mfpbench/yahpo/: __init__.py  benchmark.py
src/mf-prior-bench/src/priors/: cifar100-wide_resnet-2048-at25.yaml  cifar100-wide_resnet-2048-bad.yaml  cifar100-wide_resnet-2048-good.yaml  cifar100-wide_resnet-2048-gpt.yaml  cifar100-wide_resnet-2048-medium.yaml  iaml_glmnet-1067-at25.yaml  iaml_glmnet-1489-at25.yaml  iaml_glmnet-41146-at25.yaml  iaml_rpart-1067-at25.yaml  iaml_rpart-1489-at25.yaml  iaml_rpart-41146-at25.yaml  imagenet-resnet-512-at25.yaml  imagenet-resnet-512-bad.yaml  imagenet-resnet-512-good.yaml  imagenet-resnet-512-gpt.yaml  imagenet-resnet-512-medium.yaml  jahs_CIFAR10-at25.yaml  jahs_CIFAR10-bad.yaml  jahs_CIFAR10-good.yaml  jahs_CIFAR10-medium.yaml  jahs_ColorectalHistology-at25.yaml  jahs_ColorectalHistology-bad.yaml  jahs_ColorectalHistology-good.yaml  jahs_ColorectalHistology-medium.yaml  jahs_FashionMNIST-at25.yaml  jahs_FashionMNIST-bad.yaml  jahs_FashionMNIST-good.yaml  jahs_FashionMNIST-medium.yaml  lcbench-126026-bad.yaml  lcbench-126026-medium.yaml  lcbench-126029-at25.yaml  lcbench-167149-at25.yaml  lcbench-167185-at25.yaml  lcbench-167190-at25.yaml  lcbench-167190-bad.yaml  lcbench-167190-good.yaml  lcbench-167190-medium.yaml  lcbench-167200-at25.yaml  lcbench-167201-at25.yaml  lcbench-168329-at25.yaml  (+85 more)
src/neps_lcpfn_hpo/: .gitignore  setup.py
src/pfns_hpo/: .gitignore  README.md  justfile  pyproject.toml  setup.py
src/pfns_hpo/pfns_hpo/: __init__.py  analysis.py  download.py  plot.py  plot3D.py  plot_results.py  plot_styles.py  plotting_types.py  regret_plot.py  run.py  submit.py
src/pfns_hpo/pfns_hpo/configs/: run.yaml
src/pfns_hpo/pfns_hpo/configs/algorithm/: README.md  asha.yaml  dpl-arlind.yaml  dpl-neps-2step.yaml  dpl-neps-dyna.yaml  dpl-neps-max.yaml  dpl-neps-ucb-dyna.yaml  dpl-neps-ucb-max.yaml  dpl-neps-ucb.yaml  dpl-neps.yaml  dpl-neps_inc_norm.yaml  dyhpo-arlind.yaml  dyhpo-neps-2step.yaml  dyhpo-neps-dyna.yaml  dyhpo-neps-max.yaml  dyhpo-neps-ucb-dyna.yaml  dyhpo-neps-ucb-max.yaml  dyhpo-neps-ucb.yaml  dyhpo-neps-v2-2step.yaml  dyhpo-neps-v2-dyna.yaml  dyhpo-neps-v2-max.yaml  dyhpo-neps-v2-ucb-dyna.yaml  dyhpo-neps-v2-ucb-max.yaml  dyhpo-neps-v2-ucb.yaml  dyhpo-neps-v2.yaml  dyhpo-neps-v2_inc_norm.yaml  dyhpo-neps.yaml  hyperband.yaml  ifbo.yaml  mf_2step_bo.yaml  mf_ei_bo-dyna.yaml  mf_ei_bo-max.yaml  mf_ei_bo.yaml  mf_ucb_bo-dyna.yaml  mf_ucb_bo-max.yaml  mf_ucb_bo.yaml  pfn-bnn3-12l-ei.yaml  pfn-bnn3-2step.yaml  pfn-bnn3-5M-ei.yaml  pfn-bnn3-8b-ei.yaml  (+125 more)
src/pfns_hpo/pfns_hpo/configs/benchmark/: README.md  cifar100_wideresnet_2048.yaml  imagenet_resnet_512.yaml  jahs_cifar10.yaml  jahs_colorectal_histology.yaml  jahs_fashion_mnist.yaml  lcbench-126026-balanced.yaml  lcbench-126026.yaml  lcbench-167190-balanced.yaml  lcbench-167190.yaml  lcbench-168330-balanced.yaml  (+161 more)
src/pfns_hpo/pfns_hpo/utils/: analyse_benchmarks.py  benchmark_splits.py  plotting_utils.py
src/section5.1/: .gitignore  benchmark.py  evaluate_dpl.py  evaluate_dyhpo.py  evaluate_pfn.py  generate_table_1.ipynb  generate_tasks.py  readme.md  taskids.py
src/section5.2/: plot.sh  readme.md  taskset.sh
tests/: test_surrogate.py
(+42 files in other folders)
