[project]
name = "ifBO"
description = "In-context Freeze-Thaw Bayesian Optimization for Hyperparameter Optimization"
readme = {file = "README.md", content-type = 'text/markdown'}
license = {file = "LICENSE"}
authors = [
    {name = "Herilalaina Rakotoarison", email = "rakotoah@cs.uni-freiburg.de"},
    {name = "Steven Adriaensen", email= "adriaens@cs.uni-freiburg.de"},
    {name = "Neeratyoy Mallik", email = "mallik@cs.uni-freiburg.de"},
    {name = "Samir Garibov"},
    {name = "Edward Bergman"},
    {name = "Frank Hutter"},
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "cloudpickle>=3.0.0",
    "torch>=1.9.0",
    "numpy>=1.21.2,<2",
    "scipy>=1.13.1",
    "requests>=2.23.0",
    "submitit>=1.5.1",
]
dynamic = ["version"]
classifiers = [
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]

[project.optional-dependencies]
checking = [
  "pre-commit",
  "mypy",
  "ruff",
]

[project.urls]
homepage = "https://github.com/automl/ifBO"
repository = "https://github.com/automl/ifBO"
bugtracker = "https://github.com/automl/ifBO/issues"

[tool.setuptools.packages.find]
include = ["ifbo*"]

[tool.setuptools.package-data]
ifbo = ["priors/output_sorted.npy"]

[tool.setuptools.dynamic]
version = {attr = "ifbo.version.__version__"}

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
known-third-party = []
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.mypy]
# Options configure mypy's strict mode.
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
no_implicit_reexport = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = [
    ".venv",
    "venv",
    "build",
    "work",
    ".*/.ipynb_checkpoints/.*",
]
